# RobotLearning

./: .gitignore  README.md
docs/: ROS2多工作空间管理指南.md  开源学习项目.md  模块B-G1动作接口与Unitree-GitHub对应说明.md  模块B-G1高层预置动作机制教学文档.md  项目环境与电脑配置要求.md  题目A-urdf_tutorial机器人仿真模型修复与验证教程.md  题目A-urdf_tutorial训练材料与参考答案.md
src/moduleB/: OCR.py  README.md  build_g1_cpp_action.sh  check_g1_mujoco_env.sh  g1_action_interface.py  minimalOCR.py  minimal_g1_action.py  minimal_g1_ros2_action.py  realtime_g1_to_mujoco.py  run_g1_mujoco.sh  setup_g1_env.sh  setup_g1_mujoco_env.sh
src/moduleB/cpp/: CMakeLists.txt  README.md  minimal_g1_action.cpp
src/moduleB/samples/: operation_instruction.txt
src/ros2_g1_rviz/: README.md  package.xml  setup.cfg  setup.py
src/ros2_g1_rviz/launch/: display.launch.py
src/ros2_g1_rviz/ros2_g1_rviz/: __init__.py  demo_joint_state_publisher.py  g1_joints.py  lowstate_to_joint_state.py  sdk2_lowstate_to_joint_state.py
src/ros2_g1_rviz/rviz/: g1_display.rviz
src/ros2_g1_rviz/urdf/: g1_29dof_simple.urdf
src/urdf_tutorial/urdf/: exam_broken_robot.urdf
